--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ uploads/documents/20220304070349-2021-12-01-1464602212555.pdf
 uploads/documents/20220306203029-2021-12-01-1464602212555.pdf
 uploads/documents/20220306203029-20220304070349-2021-12-01-1464602212555.pdf
 uploads/documents/20220307235059-BresicWhitney_Calendar_Print.pdf
+uploads/documents/20220308121948-BresicWhitney_Calendar_Print.pdf
